@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-09T16:23:55Z",
+  "timestamp" : "2024-05-10T08:23:06Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 748,
-  "uniques" : 366,
+  "count" : 749,
+  "uniques" : 367,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
