@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 1,
+  "count": 4,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2024-05-09T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-10T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
