@@ -1,3 +1,12 @@
+2024-05-10T08:23:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9029437408 # 259
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-10
+* notice: last 14d: unq all: 2 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 366 748
+* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 367 749
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-05-10]
+
 2024-05-09T16:23:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9020311115 # 257
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-09
